fix (static): added theme-color to form_new.html

--- a/static/form_new.html
+++ b/static/form_new.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="style.css" rel="stylesheet" />
+    <meta content="#1a1a1a" name="theme-color">
     <style>
         textarea {
             min-height: 20rem;
