--- a/static/result_new.html
+++ b/static/result_new.html
@@ -21,6 +21,27 @@
             min-height: 5rem;
             /* Smaller height for comment section */
         }
+
+        .vim-folded {
+            white-space: nowrap;
+            overflow-x: hidden
+        }
+
+        .vim-folded::before {
+            content: "+--\00A0";
+            white-space: nowrap;
+        }
+
+        .vim-folded::after {
+            display: inline;
+            /* non wrapping white space */
+            content: "\00A0·····················";
+            white-space: nowrap;
+            text-align: left;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: clip;
+        }
     </style>
 </head>
 
@@ -58,22 +79,16 @@
             <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
 {{status}}</pre>
 
-            <div id="accordion-collapse" data-accordion="collapse" class="white mb-4"
-                data-inactive-classes="white bg-dark-gray" data-active-classes="white bg-dark-gray">
+            <div id="accordion-collapse" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
+                data-inactive-classes="vim-folded orange" data-active-classes="white bg-transparent">
                 <h2 id="accordion-collapse-heading-1"
-                    class="flex items-center justify-between w-full p-4 text-left bg-dark-gray border border-zinc-400 rounded-lg focus:ring-4 focus:ring-zinc-200 subtle-hover"
+                    class="vim-folded orange flex items-center justify-between w-full text-left hover"
                     data-accordion-target="#accordion-collapse-body-1" aria-expanded="false"
                     aria-controls="accordion-collapse-body-1">
-                    <span>View Simulation Log</span>
-                    <svg data-accordion-icon class="w-6 h-6 shrink-0 rotate-0" fill="currentColor" viewBox="0 0 20 20"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd"
-                            d="M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.06 1.06l-4.25 4.25a.75.75 0 01-1.06 0L5.23 8.27a.75.75 0 01.02-1.06z"
-                            clip-rule="evenodd"></path>
-                    </svg>
+                    <span>simulation_log =</span>
                 </h2>
                 <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
-                    <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto ">
+                    <pre class="overflow-x-auto ">
 {{result}}</pre>
                 </div>
             </div>
@@ -83,43 +98,31 @@
             <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
 {{test_cases_status}}</pre>
 
-            <div id="accordion-collapse" data-accordion="collapse" class="mb-4"
-                data-inactive-classes="white bg-dark-gray" data-active-classes="white bg-dark-gray">
+            <div id="accordion-collapse" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
+                data-inactive-classes="vim-folded orange" data-active-classes="white bg-transparent">
 
                 <h2 id="accordion-collapse-heading-2"
-                    class="flex items-center justify-between w-full p-4 text-left bg-dark-gray border border-zinc-400 rounded-lg focus:ring-4 focus:ring-zinc-200 subtle-hover"
+                    class="vim-folded flex orange items-center justify-between w-full text-left hover"
                     data-accordion-target="#accordion-collapse-body-2" aria-expanded="false"
                     aria-controls="accordion-collapse-body-2">
-                    <span>View Failed Test Case</span>
-                    <svg data-accordion-icon class="w-6 h-6 shrink-0 rotate-0" fill="currentColor" viewBox="0 0 20 20"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd"
-                            d="M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.06 1.06l-4.25 4.25a.75.75 0 01-1.06 0L5.23 8.27a.75.75 0 01.02-1.06z"
-                            clip-rule="evenodd"></path>
-                    </svg>
+                    <span>failed_test_case = </span>
                 </h2>
                 <div id="accordion-collapse-body-2" class="hidden" aria-labelledby="accordion-collapse-heading-2">
-                    <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto ">
+                    <pre class="overflow-x-auto">
 {{test_cases_result}}</pre>
                 </div>
             </div>
-            <div id="accordion-collapse" data-accordion="collapse" class="mb-4"
-                data-inactive-classes="white bg-dark-gray" data-active-classes="white bg-dark-gray">
+            <div id="accordion-collapse" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
+                data-inactive-classes="vim-folded orange" data-active-classes="white bg-transparent">
 
                 <h2 id="accordion-collapse-heading-3"
-                    class="flex items-center justify-between w-full p-4 text-left bg-dark-gray border border-zinc-400 rounded-lg focus:ring-4 focus:ring-zinc-200 subtle-hover"
+                    class="orange vim-folded flex items-center justify-between w-full text-left hover"
                     data-accordion-target="#accordion-collapse-body-3" aria-expanded="false"
                     aria-controls="accordion-collapse-body-3">
-                    <span>Dump</span>
-                    <svg data-accordion-icon class="w-6 h-6 shrink-0 rotate-0" fill="currentColor" viewBox="0 0 20 20"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd"
-                            d="M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.06 1.06l-4.25 4.25a.75.75 0 01-1.06 0L5.23 8.27a.75.75 0 01.02-1.06z"
-                            clip-rule="evenodd"></path>
-                    </svg>
+                    <span class="">dump =</span>
                 </h2>
                 <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
-                    <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto ">
+                    <pre class="rounded-lg overflow-x-auto ">
 {{dump}}</pre>
                 </div>
             </div>
