--- a/static/result_new.html
+++ b/static/result_new.html
@@ -80,9 +80,9 @@
 {{status}}</pre>
 
             <div id="accordion-collapse" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
-                data-inactive-classes="vim-folded orange" data-active-classes="white bg-transparent">
+                data-inactive-classes="vim-folded orange-low-saturation" data-active-classes="white bg-transparent">
                 <h2 id="accordion-collapse-heading-1"
-                    class="vim-folded orange flex items-center justify-between w-full text-left hover"
+                    class="vim-folded orange-low-saturation flex items-center justify-between w-full text-left hover"
                     data-accordion-target="#accordion-collapse-body-1" aria-expanded="false"
                     aria-controls="accordion-collapse-body-1">
                     <span>simulation_log =</span>
@@ -99,10 +99,10 @@
 {{test_cases_status}}</pre>
 
             <div id="accordion-collapse" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
-                data-inactive-classes="vim-folded orange" data-active-classes="white bg-transparent">
+                data-inactive-classes="vim-folded orange-low-saturation" data-active-classes="white bg-transparent">
 
                 <h2 id="accordion-collapse-heading-2"
-                    class="vim-folded flex orange items-center justify-between w-full text-left hover"
+                    class="vim-folded flex orange-low-saturation items-center justify-between w-full text-left hover"
                     data-accordion-target="#accordion-collapse-body-2" aria-expanded="false"
                     aria-controls="accordion-collapse-body-2">
                     <span>failed_test_case = </span>
@@ -113,10 +113,10 @@
                 </div>
             </div>
             <div id="accordion-collapse" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
-                data-inactive-classes="vim-folded orange" data-active-classes="white bg-transparent">
+                data-inactive-classes="vim-folded orange-low-saturation" data-active-classes="white bg-transparent">
 
                 <h2 id="accordion-collapse-heading-3"
-                    class="orange vim-folded flex items-center justify-between w-full text-left hover"
+                    class="orange-low-saturation vim-folded flex items-center justify-between w-full text-left hover"
                     data-accordion-target="#accordion-collapse-body-3" aria-expanded="false"
                     aria-controls="accordion-collapse-body-3">
                     <span class="">dump =</span>
