feat: added invert button for white theme

--- a/static/form_new.html
+++ b/static/form_new.html
@@ -63,6 +63,10 @@
             <span class="grey separator-char">|</span>
             <a href="https://github.com/ryukzak/wrench/blob/master/variants.md" class="orange hover"
                 target="_blank">[variants]</a>
+            <span class="grey separator-char">|</span>
+            <button onclick="document.body.classList.toggle('inverted')"
+                class="self-center blue hover">[invert]</button>
+
         </div>
         <form action="/submit" method="post" enctype="application/x-www-form-urlencoded;charset=UTF-8"
             class="space-y-6">
