--- a/static/result_new.html
+++ b/static/result_new.html
@@ -51,6 +51,9 @@
             <a class="subtle-hover " href="/">Wrench Report</a>
         </h1>
     </div>
+
+    <button onclick="document.body.classList.toggle('inverted')" class="self-center blue hover">[invert]</button>
+
     <div class="self-center flex flex-wrap gap-4 w-full max-w-screen-xl p-4">
         <div class="flex-1 min-w-[300px] max-w-[60%] mt-4">
             <em>
