fix (static): fixed text wrapping in form page

--- a/static/form_new.html
+++ b/static/form_new.html
@@ -92,25 +92,25 @@
             <div class="mb-6">
                 <label for="name" class="block   grey">/* Author Name */</label>
                 <input type="text" id="name" name="name" required
-                    class="subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md   " />
+                    class="whitespace-nowrap overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md   " />
             </div>
 
             <div class="mb-6">
                 <label for="comment" class="block   grey">/* Comment */</label>
                 <textarea id="comment" name="comment"
-                    class="subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md   "></textarea>
+                    class="whitespace-nowrap overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md   "></textarea>
             </div>
 
             <div class="mb-6">
                 <label for="asm" class="block   grey">/* Assembler Code */</label>
                 <textarea id="asm" name="asm" required
-                    class="subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md   "></textarea>
+                    class="whitespace-nowrap overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md   "></textarea>
             </div>
 
             <div class="mb-6">
                 <label for="config" class="block   grey">/* Config (YAML) */</label>
                 <textarea id="config" name="config" required
-                    class="subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md   "></textarea>
+                    class="whitespace-nowrap overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md   "></textarea>
             </div>
 
             <div class="text-center">
