--- a/static/form_new.html
+++ b/static/form_new.html
@@ -115,7 +115,7 @@
 
             <div class="text-center">
                 <input type="submit" value="Submit"
-                    class="w-full inline-flex justify-center py-2 px-4 border border-transparent shadow-sm   rounded-md text-white" />
+                    class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm   rounded-md text-white" />
             </div>
 
             <div class="text-center grey">[{{version}}]</div>
