--- a/static/result.html
+++ b/static/result.html
@@ -1,216 +1,137 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simulation Results</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css"
-      rel="stylesheet"
-    />
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="style.css" rel="stylesheet" />
+    <meta content="#1a1a1a" name="theme-color">
+
     <style>
-      body,
-      h1,
-      label,
-      textarea,
-      input[type="text"],
-      select,
-      a {
-        font-family:
-          "Anonymous Pro",
-          Consolas,
-          Monaco,
-          Lucida Console,
-          Liberation Mono,
-          DejaVu Sans Mono,
-          Bitstream Vera Sans Mono,
-          Courier New,
-          monospace;
-      }
-      textarea,
-      input[type="text"],
-      select {
-        font-size: 0.875rem; /* Smaller font size */
-      }
-      textarea {
-        min-height: 20rem; /* Expand to avoid scrolling */
-      }
-      #comment {
-        min-height: 5rem; /* Smaller height for comment section */
-      }
-      select {
-        appearance: none;
-        background-color: #fff;
-        border: 1px solid #d1d5db;
-        border-radius: 0.375rem;
-        padding: 0.5rem 1rem;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-        transition:
-          border-color 0.2s,
-          box-shadow 0.2s;
-      }
-      select:focus {
-        border-color: #6366f1;
-        box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.3);
-        outline: none;
-      }
-      select option {
-        padding: 0.5rem;
-      }
-      pre {
-        white-space: pre-wrap; /* Wrap lines in pre elements */
-      }
+        textarea {
+            min-height: 20rem;
+            /* Expand to avoid scrolling */
+        }
+
+        #comment {
+            min-height: 5rem;
+            /* Smaller height for comment section */
+        }
+
+        .vim-folded {
+            white-space: nowrap;
+            overflow-x: hidden
+        }
+
+        .vim-folded::before {
+            content: "+--\00A0";
+            white-space: nowrap;
+        }
+
+        .vim-folded::after {
+            display: inline;
+            /* non wrapping white space */
+            content: "\00A0·····················";
+            white-space: nowrap;
+            text-align: left;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: clip;
+        }
     </style>
-  </head>
-  <body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="bg-white p-8 rounded-lg shadow-lg w-full m-4">
-      <h1 class="text-2xl font-bold mb-6 text-center">
-        <a href="/">Wrench Report</a>
-      </h1>
-      <div class="flex flex-wrap gap-4">
-        <div class="flex-1 min-w-[300px] max-w-[60%]">
-          <p class="text-left mb-4"><strong>Author:</strong> {{name}}</p>
-          <p class="text-left mb-6"><strong>Variant:</strong> {{variant}}</p>
-          <h2 class="text-xl font-semibold mb-4">Comment:</h2>
-          <pre class="bg-gray-100 p-4 rounded-lg overflow-x-auto text-sm mb-4">
-{{comment}}</pre
-          >
+</head>
 
-          <h2 class="text-xl font-semibold mt-6 mb-4">Assembler Code:</h2>
-          <pre class="bg-gray-100 p-4 rounded-lg overflow-x-auto text-sm mb-4">
-{{assembler_code}}</pre
-          >
+<body class="full flex flex-col justify-center items-center min-h-screen">
+    <div class="text-center w-full mb-8"> <!-- Добавляем отступ снизу -->
+        <h1 class="large white">
+            <a class="subtle-hover " href="/">Wrench Report</a>
+        </h1>
+    </div>
 
-          <h2 class="text-xl font-semibold mt-6 mb-4">
-            Simulation Config (YAML):
-          </h2>
-          <pre class="bg-gray-100 p-4 rounded-lg overflow-x-auto text-sm mb-4">
-{{yaml_content}}</pre
-          >
+    <button onclick="document.body.classList.toggle('inverted')" class="self-center blue hover">[invert]</button>
+
+    <div class="self-center flex flex-wrap gap-4 w-full max-w-screen-xl p-4">
+        <div class="flex-1 min-w-[300px] max-w-[60%] mt-4">
+            <em>
+                <p class="orange texm-sm text-left mb-4"><span>[author]</span> {{name}}</p>
+            </em>
+            <em>
+                <p class="orange texm-sm text-left mb-6"><span>[variant]</span> {{variant}}</p>
+            </em>
+
+            <h2 class="grey mb-4">[comment]</h2>
+            <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
+{{comment}}</pre>
+
+            <h2 class="green mt-6 mb-4">[assembler_code]</h2>
+            <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
+{{assembler_code}}</pre>
+
+            <h2 class="blue mt-6 mb-4">
+                [simulation_config]: <span class="grey">/* YAML */</span>
+            </h2>
+            <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
+{{yaml_content}}</pre>
         </div>
-        <div class="flex-1 min-w-[300px] max-w-[40%] p-4">
-          <h2 class="text-xl font-semibold mb-4">Simulation Result:</h2>
-          <pre class="bg-gray-100 p-4 rounded-lg overflow-x-auto text-sm mb-4">
-{{status}}</pre
-          >
+        <div class="flex-1 min-w-[300px] max-w-[40%]">
+            <h2 class="fuschia mb-4">[simulation_result]</h2>
+            <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
+{{status}}</pre>
 
-          <div id="accordion-collapse" data-accordion="collapse" class="mb-4">
-            <h2
-              id="accordion-collapse-heading-1"
-              class="flex items-center justify-between w-full p-4 font-medium text-left text-gray-500 bg-gray-100 border border-gray-200 rounded-lg focus:ring-4 focus:ring-gray-200"
-              data-accordion-target="#accordion-collapse-body-1"
-              aria-expanded="false"
-              aria-controls="accordion-collapse-body-1"
-            >
-              <span>View Simulation Log</span>
-              <svg
-                data-accordion-icon
-                class="w-6 h-6 shrink-0 rotate-180"
-                fill="currentColor"
-                viewBox="0 0 20 20"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.06 1.06l-4.25 4.25a.75.75 0 01-1.06 0L5.23 8.27a.75.75 0 01.02-1.06z"
-                  clip-rule="evenodd"
-                ></path>
-              </svg>
-            </h2>
-            <div
-              id="accordion-collapse-body-1"
-              class="hidden"
-              aria-labelledby="accordion-collapse-heading-1"
-            >
-              <pre class="bg-gray-100 p-4 rounded-lg overflow-x-auto text-sm">
-{{result}}</pre
-              >
+            <div id="accordion-collapse" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
+                data-inactive-classes="vim-folded orange-low-saturation" data-active-classes="white bg-transparent">
+                <h2 id="accordion-collapse-heading-1"
+                    class="vim-folded orange-low-saturation flex items-center justify-between w-full text-left hover"
+                    data-accordion-target="#accordion-collapse-body-1" aria-expanded="false"
+                    aria-controls="accordion-collapse-body-1">
+                    <span>simulation_log =</span>
+                </h2>
+                <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
+                    <pre class="overflow-x-auto ">
+{{result}}</pre>
+                </div>
             </div>
-          </div>
-          <h2 class="text-xl font-semibold mt-6 mb-4">Testcase Result:</h2>
-          <pre class="bg-gray-100 p-4 rounded-lg overflow-x-auto text-sm mb-4">
-{{test_cases_status}}</pre
-          >
 
-          <div id="accordion-collapse" data-accordion="collapse" class="mb-4">
-            <h2
-              id="accordion-collapse-heading-2"
-              class="flex items-center justify-between w-full p-4 font-medium text-left text-gray-500 bg-gray-100 border border-gray-200 rounded-lg focus:ring-4 focus:ring-gray-200"
-              data-accordion-target="#accordion-collapse-body-2"
-              aria-expanded="false"
-              aria-controls="accordion-collapse-body-2"
-            >
-              <span>View Failed Test Case</span>
-              <svg
-                data-accordion-icon
-                class="w-6 h-6 shrink-0 rotate-180"
-                fill="currentColor"
-                viewBox="0 0 20 20"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.06 1.06l-4.25 4.25a.75.75 0 01-1.06 0L5.23 8.27a.75.75 0 01.02-1.06z"
-                  clip-rule="evenodd"
-                ></path>
-              </svg>
-            </h2>
-            <div
-              id="accordion-collapse-body-2"
-              class="hidden"
-              aria-labelledby="accordion-collapse-heading-2"
-            >
-              <pre class="bg-gray-100 p-4 rounded-lg overflow-x-auto text-sm">
-{{test_cases_result}}</pre
-              >
+
+            <h2 class="purple mt-6 mb-4">[testcase_result]</h2>
+            <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
+{{test_cases_status}}</pre>
+
+            <div id="accordion-collapse" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
+                data-inactive-classes="vim-folded orange-low-saturation" data-active-classes="white bg-transparent">
+
+                <h2 id="accordion-collapse-heading-2"
+                    class="vim-folded flex orange-low-saturation items-center justify-between w-full text-left hover"
+                    data-accordion-target="#accordion-collapse-body-2" aria-expanded="false"
+                    aria-controls="accordion-collapse-body-2">
+                    <span>failed_test_case = </span>
+                </h2>
+                <div id="accordion-collapse-body-2" class="hidden" aria-labelledby="accordion-collapse-heading-2">
+                    <pre class="overflow-x-auto">
+{{test_cases_result}}</pre>
+                </div>
             </div>
-          </div>
-          <div id="accordion-collapse" data-accordion="collapse" class="mb-4">
-            <h2
-              id="accordion-collapse-heading-3"
-              class="flex items-center justify-between w-full p-4 font-medium text-left text-gray-500 bg-gray-100 border border-gray-200 rounded-lg focus:ring-4 focus:ring-gray-200"
-              data-accordion-target="#accordion-collapse-body-3"
-              aria-expanded="false"
-              aria-controls="accordion-collapse-body-3"
-            >
-              <span>Dump</span>
-              <svg
-                data-accordion-icon
-                class="w-6 h-6 shrink-0 rotate-180"
-                fill="currentColor"
-                viewBox="0 0 20 20"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.06 1.06l-4.25 4.25a.75.75 0 01-1.06 0L5.23 8.27a.75.75 0 01.02-1.06z"
-                  clip-rule="evenodd"
-                ></path>
-              </svg>
-            </h2>
-            <div
-              id="accordion-collapse-body-3"
-              class="hidden"
-              aria-labelledby="accordion-collapse-heading-3"
-            >
-              <pre class="bg-gray-100 p-4 rounded-lg overflow-x-auto text-sm">
-{{dump}}</pre
-              >
+            <div id="accordion-collapse" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
+                data-inactive-classes="vim-folded orange-low-saturation" data-active-classes="white bg-transparent">
+
+                <h2 id="accordion-collapse-heading-3"
+                    class="orange-low-saturation vim-folded flex items-center justify-between w-full text-left hover"
+                    data-accordion-target="#accordion-collapse-body-3" aria-expanded="false"
+                    aria-controls="accordion-collapse-body-3">
+                    <span class="">dump =</span>
+                </h2>
+                <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
+                    <pre class="rounded-lg overflow-x-auto ">
+{{dump}}</pre>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
-  </body>
+</body>
+
 </html>
