feat: add signature (hopefully it will be allowed in the end)

--- a/static/result.html
+++ b/static/result.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta content="#1a1a1a" name="theme-color">
+    <!-- restyled by huji, proud 🦎🪽✨⬆️☁️ -->
 </head>
 
 <body class="full flex flex-col justify-center items-center min-h-screen">
