--- a/static/form.html
+++ b/static/form.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta content="#1a1a1a" name="theme-color">
+    <!-- restyled by huji, proud 🦎🪽✨⬆️☁️ -->
     <style>
         textarea {
             min-height: 20rem;
