--- a/static/form.html
+++ b/static/form.html
@@ -271,14 +271,6 @@
             font-weight: 200;
         }
 
-        @media (min-width: 1024px) {
-            .large {
-                font-size: 4vw;
-                line-height: 1.11111111em;
-                font-weight: 200;
-            }
-        }
-
         .italic {
             font-style: italic;
         }
@@ -320,7 +312,7 @@
 
         @media (min-width: 768px) {
             body {
-                font-size: 2vw;
+                font-size: 2*0.7vw;
             }
 
             .separator-char {
@@ -330,8 +322,14 @@
 
         @media (min-width: 1024px) {
             body {
-                font-size: 1.11111111vw;
+                font-size: 1vw;
                 overflow: auto;
+            }
+
+            .large {
+                font-size: 4vw;
+                line-height: 1.11111111em;
+                font-weight: 200;
             }
         }
 
@@ -344,7 +342,6 @@
             display: inline;
             font-family: inherit;
             font-weight: inherit;
-            font-size: inherit;
             letter-spacing: inherit;
             padding: 0;
             margin: 0;
