--- a/static/form.html
+++ b/static/form.html
@@ -26,10 +26,12 @@
             appearance: none;
             border-radius: 0.375rem;
             padding: 0.5rem 1rem;
-            transition: all 0.s
+            transition: all 0.1s;
+            background-color: var(--c-dark-grey);
+
         }
 
-        select option {
+        select>option {
             padding: 0.5rem;
             background-color: var(--c-dark-grey);
         }
@@ -37,7 +39,7 @@
         select:focus,
         input:focus,
         textarea:focus {
-            border-color: var(--c-purple);
+            border-color: var(--c-white);
             outline: none;
         }
 
@@ -85,7 +87,7 @@
             <div class="mb-6">
                 <label for="variant" class="block grey ">/* variant */</label>
                 <select id="variant" name="variant"
-                    class="subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md focus:outline-none focus:ring-purple-500 focus:border-purple-500 ">
+                    class="white subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md ">
                     <option value="" selected disabled>Select a variant</option>
                     {{variants}}
                 </select>
@@ -94,7 +96,7 @@
             <div class="mb-6">
                 <label for="isa" class="block grey ">/* ISA */</label>
                 <select id="isa" name="isa"
-                    class="subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md ">
+                    class="white subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md ">
                     <option value="risc-iv-32" selected>risc-iv-32</option>
                     <option value="f32a">f32a</option>
                     <option value="acc32">acc32</option>
@@ -104,25 +106,25 @@
             <div class="mb-6">
                 <label for="name" class="block grey">/* Author Name */</label>
                 <input type="text" id="name" name="name" required
-                    class="whitespace-nowrap overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md " />
+                    class="whitespace-nowrap overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md" />
             </div>
 
             <div class="mb-6">
                 <label for="comment" class="block grey">/* Comment */</label>
                 <textarea id="comment" name="comment"
-                    class="whitespace-nowrap overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md "></textarea>
+                    class="whitespace-nowrap overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"></textarea>
             </div>
 
             <div class="mb-6">
                 <label for="asm" class="block grey">/* Assembler Code */</label>
                 <textarea id="asm" name="asm" required
-                    class="whitespace-nowrap overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md "></textarea>
+                    class="whitespace-nowrap overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"></textarea>
             </div>
 
             <div class="mb-6">
                 <label for="config" class="block grey">/* Config (YAML) */</label>
                 <textarea id="config" name="config" required
-                    class="whitespace-nowrap overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md "></textarea>
+                    class="whitespace-nowrap overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"></textarea>
             </div>
 
             <div class="text-center">
@@ -365,11 +367,9 @@
         }
 
         .subtle-hover:hover {
-            background: transparent;
             box-shadow: none;
             cursor: pointer;
             opacity: 0.8;
-            color: currentColor;
         }
 
         .title {
