--- a/static/result.html
+++ b/static/result.html
@@ -39,7 +39,7 @@
             document.body.classList.add('inverted')
         }
     </script>
-    <div class="self-center flex flex-col max-w-[90%] p-4 mt-8">
+    <div class="self-center flex flex-col w-[90%] p-4 mt-8">
         <div>
             <p class="grey texm-sm text-left"><span>/* variant:</span> {{variant}} */</p>
             <p class="grey texm-sm text-left mb-6"><span>/* author:</span> {{name}} */</p>
@@ -70,7 +70,7 @@
 {{status}}</pre>
         </div>
 
-        <div id="accordion-collapse" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
+        <div id="accordion-collapse-simulation-log" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
             data-inactive-classes="vim-folded orange-low-saturation" data-active-classes="white bg-transparent">
             <h2 id="accordion-collapse-heading-1"
                 class="vim-folded orange-low-saturation flex items-center justify-between w-full text-left hover"
@@ -79,18 +79,21 @@
                 <span class="noselect">simulation_log =</span>
             </h2>
             <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
-                <pre class="overflow-x-auto ">
+                <pre id="simulation-log-text-element" class="overflow-x-auto ">
 {{result}}</pre>
             </div>
         </div>
-
+        <div id="simulation-log-empty-tag" class="hidden mb-4 bg-dark-gray p-4 rounded-lg">simulation_log = ""
+            <span class="grey"> /* nothing returned */</span>
+        </div>
 
         <h2 class="grey mt-6 mb-4">/* testcase_result */</h2>
         <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
 {{test_cases_status}}</pre>
 
-        <div id="accordion-collapse" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
-            data-inactive-classes="vim-folded orange-low-saturation" data-active-classes="white bg-transparent">
+        <div id="accordion-collapse-test-cases-result" data-accordion="collapse"
+            class="mb-4 bg-dark-gray p-4 rounded-lg" data-inactive-classes="vim-folded orange-low-saturation"
+            data-active-classes="white bg-transparent">
 
             <h2 id="accordion-collapse-heading-2"
                 class="vim-folded flex orange-low-saturation items-center justify-between w-full text-left hover"
@@ -99,11 +102,14 @@
                 <span class="noselect">failed_test_case =</span>
             </h2>
             <div id="accordion-collapse-body-2" class="hidden" aria-labelledby="accordion-collapse-heading-2">
-                <pre class="overflow-x-auto">
+                <pre id="test_cases_result-text-element" class="overflow-x-auto">
 {{test_cases_result}}</pre>
             </div>
         </div>
-        <div id="accordion-collapse" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
+        <div id="test-cases-result-empty-tag" class="hidden mb-4 bg-dark-gray p-4 rounded-lg">failed_test_case = ""
+            <span class="grey"> /* nothing returned */</span>
+        </div>
+        <div id="accordion-collapse-dump" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
             data-inactive-classes="vim-folded orange-low-saturation" data-active-classes="white bg-transparent">
 
             <h2 id="accordion-collapse-heading-3"
@@ -113,12 +119,35 @@
                 <span class="noselect">dump =</span>
             </h2>
             <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
-                <pre class="rounded-lg overflow-x-auto ">
+                <pre id="dump-text-element" class="rounded-lg overflow-x-auto ">
 {{dump}}</pre>
             </div>
         </div>
+        <div id="dump-empty-tag" class="hidden mb-4 bg-dark-gray p-4 rounded-lg">dump = ""
+            <span class="grey"> /* nothing returned */</span>
+        </div>
     </div>
-    </div>
+
+    <script>
+        const dumpText = document.getElementById("dump-text-element").innerText;
+        if (dumpText.trim() === "") {
+            document.getElementById("accordion-collapse-dump").classList.add("hidden");
+            document.getElementById("dump-empty-tag").classList.remove("hidden")
+        }
+
+        const testCasesResultText = document.getElementById("test_cases_result-text-element").innerText;
+        if (testCasesResultText.trim() === "") {
+            document.getElementById("accordion-collapse-test-cases-result").classList.add("hidden");
+            document.getElementById("test-cases-result-empty-tag").classList.remove("hidden")
+        }
+
+        const simulationLogText = document.getElementById("simulation-log-text-element").innerText;
+        if (simulationLogText.trim() === "") {
+            document.getElementById("accordion-collapse-simulation-log").classList.add("hidden");
+            document.getElementById("simulation-log-empty-tag").classList.remove("hidden")
+        }
+    </script>
+
     <style>
         /* Palette */
         body {
