--- a/static/result.html
+++ b/static/result.html
@@ -46,10 +46,12 @@
                     <p class="grey texm-sm text-left mb-6"><span>/* author:</span> {{name}} */</p>
                 </div>
                 <div>
-                    <h2 id="comment-header" class="grey mb-4">/* comment */</h2>
                     <h2 id="empty-comment-header" class="hidden grey mb-4">/* comment: not found */</h2>
-                    <pre id="comment-text-element" class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
+                    <div id="comment-header">
+                        <h2 class="grey mb-4">/* comment */</h2>
+                        <pre id="comment-text-element" class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
 {{comment}}</pre>
+                    </div>
                 </div>
 
                 <div>
